# beast_site

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  notes.txt  test.cpp
app/html/: head.html  header.html  test.html
app/html/ru/: header.html
configs/: config.jsonc
include/: boost_server.hpp  html_parser.hpp  json_parser.hpp  server.hpp
